--- a/Chef-portfolio /css/main.css
+++ b/Chef-portfolio /css/main.css
@@ -127,7 +127,7 @@ body .wrapper .introSect {
   padding: 3%;
   margin-top: 5%;
   color: #BDC696;
-  background-image: url(/img/chef.jpg);
+  background-image: url(../img/chef-1245676_640.jpg);
   -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
           box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   background-repeat: no-repeat;
