--- a/Chef-portfolio /css/main.scss
+++ b/Chef-portfolio /css/main.scss
@@ -115,7 +115,7 @@ body {
             padding: 3%;
             margin-top: 5%; 
             color: map-get($colors , accentColor1 );
-            background-image: url(/img/chef.jpg);
+            background-image: url(../img/chef-1245676_640.jpg);
             box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
             background-repeat: no-repeat;
             background-size: cover;
