--- a/Chef-portfolio/css/main.scss
+++ b/Chef-portfolio/css/main.scss
@@ -130,8 +130,10 @@ body {
             }
 
             p {
-                font-size: 1em;
+                font-size: 1vmax;
                 letter-spacing: 2.5px;
+
+              
             }
 
             .tittleContainer {
