--- a/Chef-portfolio/css/main.css
+++ b/Chef-portfolio/css/main.css
@@ -250,4 +250,44 @@ body .wrapper .expSect .card5 {
     opacity: 1;
   }
 }
+
+footer nav {
+  width: 100%;
+  height: 10vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  background-color: #D1D3C4;
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+footer nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+}
+
+footer nav ul li a {
+  color: #351431;
+  text-decoration: none;
+  font-size: 1.2em;
+  font-weight: 300;
+  letter-spacing: 2.5px;
+  text-transform: uppercase;
+}
 /*# sourceMappingURL=main.css.map */
