--- a/Chef-portfolio/css/main.scss
+++ b/Chef-portfolio/css/main.scss
@@ -204,3 +204,34 @@ body {
     }
 }
 
+footer {
+
+    nav {
+        width: 100%;
+        height: 10vh;
+        display: flex;
+        flex-direction: row;
+        background-color: map-get($colors , primaryColor );
+        box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    
+        ul {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-direction: row;
+            width: 100%;
+            
+                
+            li a {
+                color: map-get($colors , accentColor3 ); 
+                text-decoration: none;
+                font-size: 1.2em;
+                font-weight: 300;
+                letter-spacing: 2.5px;
+                text-transform: uppercase;
+            }
+        }   
+    }
+}
+
+
