--- a/Chef-portfolio/css/main.scss
+++ b/Chef-portfolio/css/main.scss
@@ -132,8 +132,6 @@ body {
             p {
                 font-size: 1vmax;
                 letter-spacing: 2.5px;
-
-              
             }
 
             .tittleContainer {
@@ -165,21 +163,22 @@ body {
                 height: 100%;
                 margin-top: 3%;
                 grid-gap: 1em;
-                grid-template-columns: 1fr 1fr 1fr;
-                grid-template-rows: 1fr 1fr;
-                grid-template-areas: "card1 card2 card3" "card4 card5 card6";
+                grid-template-rows: 1fr 1fr 1fr;
+                
+                grid-template-areas: "card1 card2 card3";
 
                 .card {
                     background-color: map-get($colors , accentColor2 );
                     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-                   margin: 1%;
-                   padding: 3%;
-
-                   h3 {
-                       
-                   }
+                    
+                    margin: 1%;
+                    padding: 3%;
                 }
-              }
+
+                img {
+                    width: 100%;
+                }
+
               
               .card1 { grid-area: card1; }
               
@@ -187,10 +186,7 @@ body {
               
               .card3 { grid-area: card3; }
               
-              .card4 { grid-area: card4; }
-              
-              .card5 { grid-area: card5; }
-
+            }
         }
     }
 
