--- a/Chef-portfolio/css/main.css
+++ b/Chef-portfolio/css/main.css
@@ -48,6 +48,7 @@ body {
   background-color: #DFE0DC;
   background-size: 100%;
   background-attachment: fixed;
+  height: 100%;
 }
 
 body nav {
@@ -91,7 +92,7 @@ body nav ul li a {
 }
 
 body .wrapper {
-  height: 200vh;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -172,7 +173,7 @@ body .wrapper .expSect {
       -ms-flex-align: end;
           align-items: flex-end;
   margin-top: 10%;
-  height: 65vh;
+  height: 65vw;
   width: 100%;
   color: #351431;
 }
@@ -197,12 +198,12 @@ body .wrapper .expSect .cardContainer .card {
   background-color: #775253;
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
           box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  margin: 1%;
+  margin: auto;
   padding: 3%;
 }
 
 body .wrapper .expSect .cardContainer img {
-  width: 100%;
+  max-width: 100%;
 }
 
 body .wrapper .expSect .cardContainer .card1 {
@@ -223,6 +224,90 @@ body .wrapper .expSect .cardContainer .card3 {
   grid-area: card3;
 }
 
+body .recipes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 100%;
+  height: auto;
+  margin: auto;
+}
+
+body .recipes h1 {
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+body .recipes h2 {
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+body .recipes h3 {
+  text-align: center;
+  font-size: 1.2rem;
+  text-transform: capitalize;
+  font-weight: bold;
+}
+
+body .recipes h4 {
+  font-size: 1rem;
+  text-transform: capitalize;
+}
+
+body .recipes .recipe-content {
+  max-width: 100%;
+  height: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  border: solid gray 1px;
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+body .recipes .recipe-header {
+  width: 100%;
+  height: 30%;
+  background-color: #351431;
+  text-align: center;
+  text-transform: capitalize;
+  color: white;
+  border: 1px  solid black;
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  margin: auto;
+  margin-bottom: 5%;
+  padding: 2%;
+}
+
+body .recipes .recipe-img {
+  max-width: 22%;
+  max-height: 5%;
+  margin-right: auto;
+}
+
+body .recipes .recipe-area {
+  max-width: 70%;
+  padding: 2%;
+  margin: auto;
+}
+
 @-webkit-keyframes fadein {
   from {
     opacity: .1;
@@ -241,7 +326,7 @@ body .wrapper .expSect .cardContainer .card3 {
   }
 }
 
-footer nav {
+body footer nav {
   width: 100%;
   height: 10vh;
   display: -webkit-box;
@@ -251,12 +336,11 @@ footer nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  background-color: #D1D3C4;
   -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
           box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-footer nav ul {
+body footer nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -272,7 +356,7 @@ footer nav ul {
   width: 100%;
 }
 
-footer nav ul li a {
+body footer nav ul li a {
   color: #351431;
   text-decoration: none;
   font-size: 1.2em;
