--- a/Chef-portfolio/css/main.css
+++ b/Chef-portfolio/css/main.css
@@ -2,6 +2,15 @@
    v2.0-modified | 20110126
    License: none (public domain)
 */
+::-moz-selection {
+  background: #DFE0DC;
+  /* WebKit/Blink Browsers */
+}
+::selection {
+  background: #DFE0DC;
+  /* WebKit/Blink Browsers */
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -109,8 +118,8 @@ body .wrapper {
   margin-right: auto;
   margin-left: auto;
   max-width: 1500px;
-  padding-right: 20px;
   padding-left: 20px;
+  padding-right: 20px;
   -webkit-animation: fadein 2s;
           animation: fadein 2s;
 }
@@ -124,16 +133,18 @@ body .wrapper .line {
 }
 
 body .wrapper .introSect {
-  height: 75vh;
+  height: 100vh;
+  width: 100vw;
   padding: 3%;
-  margin-top: 5%;
   color: #BDC696;
-  background-image: url(../img/chef-1245676_640.jpg);
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  background-image: url(../../img/chef.jpg);
+  background-attachment: fixed;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
+  z-index: 1;
 }
 
 body .wrapper .introSect h1 {
@@ -154,7 +165,7 @@ body .wrapper .introSect h2 {
 }
 
 body .wrapper .introSect p {
-  font-size: 1vmax;
+  font-size: 1em;
   letter-spacing: 2.5px;
 }
 
@@ -370,12 +381,21 @@ body .wrapper .introSect .active + .modal {
 }
 
 body .wrapper .introSect .tittleContainer {
-  padding: 3%;
-  width: 30%;
+  position: fixed;
+  padding: 2%;
+  margin: 1%;
+  max-width: 350px;
   height: 105%;
   background-color: #775253;
   -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
           box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  z-index: 3;
+}
+
+body .wrapper .introSect .tittleContainer svg {
+  position: absolute;
+  right: 0;
+  top: 0%;
 }
 
 body .wrapper .expSect {
@@ -396,136 +416,102 @@ body .wrapper .expSect {
   height: 65vw;
   width: 100%;
   color: #351431;
+  z-index: 2;
 }
 
 body .wrapper .expSect h2 {
-  font-size: 2.5em;
+  font-size: 3em;
 }
 
-body .wrapper .expSect .cardContainer {
+body .wrapper .expSect .recipeWrapper {
+  margin-top: 5%;
+  height: 100%;
+  width: 65%;
   display: -ms-grid;
   display: grid;
-  width: 100%;
-  height: 100%;
-  margin-top: 3%;
   grid-gap: 1em;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
   -ms-grid-rows: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr;
-      grid-template-areas: "card1 card2 card3";
+      grid-template-areas: "recipe1" "recipe2" "recipe3";
 }
 
-body .wrapper .expSect .cardContainer .card {
-  background-color: #775253;
-  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  margin: auto;
-  padding: 3%;
+body .wrapper .expSect .recipeCard {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 1.5%;
+  color: #351431;
+  background-color: #BDC696;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-body .wrapper .expSect .cardContainer img {
-  max-width: 100%;
+body .wrapper .expSect .recipeCard .imgContainer {
+  width: 50%;
+  height: 100%;
 }
 
-body .wrapper .expSect .cardContainer .card1 {
+body .wrapper .expSect .recipeCard .imgContainer img {
+  min-width: 320px;
+  max-width: 320px;
+  max-height: 300px;
+  min-height: 300px;
+}
+
+body .wrapper .expSect .recipeCard .textWrapper {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 1.5%;
+}
+
+body .wrapper .expSect .recipeCard h3 {
+  font-size: 2.2em;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+}
+
+body .wrapper .expSect .recipeCard p {
+  margin-top: 3.5%;
+  font-size: 1.2em;
+}
+
+body .wrapper .expSect .recipe1 {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
-  grid-area: card1;
+  grid-area: recipe1;
 }
 
-body .wrapper .expSect .cardContainer .card2 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  grid-area: card2;
+body .wrapper .expSect .recipe2 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: recipe2;
 }
 
-body .wrapper .expSect .cardContainer .card3 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-  grid-area: card3;
-}
-
-body .recipes {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  max-width: 100%;
-  height: auto;
-  margin: auto;
-}
-
-body .recipes h1 {
-  text-align: center;
-  font-size: 2.5rem;
-}
-
-body .recipes h2 {
-  text-align: center;
-  font-size: 1.5rem;
-}
-
-body .recipes h3 {
-  text-align: center;
-  font-size: 1.2rem;
-  text-transform: capitalize;
-  font-weight: bold;
-}
-
-body .recipes h4 {
-  font-size: 1rem;
-  text-transform: capitalize;
-}
-
-body .recipes .recipe-content {
-  max-width: 100%;
-  height: 15%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  border: solid gray 1px;
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  margin: auto;
-  margin-bottom: 20px;
-}
-
-body .recipes .recipe-header {
-  width: 100%;
-  height: 30%;
-  background-color: #351431;
-  text-align: center;
-  text-transform: capitalize;
-  color: white;
-  border: 1px  solid black;
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  margin: auto;
-  margin-bottom: 5%;
-  padding: 2%;
-}
-
-body .recipes .recipe-img {
-  max-width: 22%;
-  max-height: 5%;
-  margin-right: auto;
-}
-
-body .recipes .recipe-area {
-  max-width: 70%;
-  padding: 2%;
-  margin: auto;
+body .wrapper .expSect .recipe3 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: recipe3;
 }
 
 @-webkit-keyframes fadein {
