--- a/Chef-portfolio/css/main.css
+++ b/Chef-portfolio/css/main.css
@@ -114,11 +114,28 @@ body .wrapper {
           justify-content: flex-start;
   margin-right: auto;
   margin-left: auto;
-  max-width: 1500px;
+  max-width: 100vw;
   padding-left: 20px;
   padding-right: 20px;
   -webkit-animation: fadein 2s;
           animation: fadein 2s;
+}
+
+@media only screen and (max-width: 768px) {
+  body .wrapper {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  body .wrapper {
+    max-width: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+    -webkit-animation: fadein 2s;
+            animation: fadein 2s;
+  }
 }
 
 body .wrapper .line {
@@ -142,10 +159,30 @@ body .wrapper .tittleContainer {
   z-index: 3;
 }
 
+@media only screen and (max-width: 500px) {
+  body .wrapper .tittleContainer {
+    position: relative;
+    height: 85%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body .wrapper .tittleContainer {
+    max-width: 325px;
+  }
+}
+
 body .wrapper .tittleContainer svg {
   position: absolute;
   right: 0;
   top: 0%;
+}
+
+@media only screen and (max-width: 768px) {
+  body .wrapper .tittleContainer svg {
+    width: 125px;
+    height: 125px;
+  }
 }
 
 body .wrapper .tittleContainer h1 {
@@ -154,6 +191,12 @@ body .wrapper .tittleContainer h1 {
   font-weight: 300;
   letter-spacing: 1px;
   display: block;
+}
+
+@media only screen and (max-width: 768px) {
+  body .wrapper .tittleContainer h1 {
+    font-size: 2em;
+  }
 }
 
 body .wrapper .tittleContainer h2 {
@@ -170,6 +213,22 @@ body .wrapper .tittleContainer p {
   letter-spacing: 2.5px;
 }
 
+body .wrapper .tittleContainer a {
+  text-decoration: none;
+  color: #BDC696;
+  text-transform: uppercase;
+  font-size: 1.3em;
+  white-space: nowrap;
+  font-weight: 300;
+  letter-spacing: 1.2px;
+}
+
+@media only screen and (max-width: 768px) {
+  body .wrapper .tittleContainer a {
+    font-size: 1em;
+  }
+}
+
 body .wrapper .tittleContainer button {
   display: inline-block;
   text-decoration: none;
@@ -180,6 +239,7 @@ body .wrapper .tittleContainer button {
   transition: all ease .3s;
   font-size: 1.1rem;
   border-radius: 5px;
+  border: solid 1px #BDC696;
   color: #BDC696;
 }
 
@@ -222,6 +282,14 @@ body .wrapper .tittleContainer .modal {
           transform: translateY(45px);
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+@media only screen and (max-width: 500px) {
+  body .wrapper .tittleContainer .modal {
+    position: absolute;
+    width: 500px;
+    height: 500px;
+  }
 }
 
 body .wrapper .tittleContainer .modal .next {
@@ -383,7 +451,6 @@ body .wrapper .tittleContainer .active + .modal {
 
 body .wrapper .introSect {
   height: 100vh;
-  width: 100vw;
   padding: 3%;
   color: #BDC696;
   background-image: url(../../img/chef.jpg);
@@ -394,6 +461,29 @@ body .wrapper .introSect {
   background-size: cover;
   background-position: top;
   z-index: 1;
+}
+
+@media only screen and (max-width: 500px) {
+  body .wrapper .introSect {
+    height: 100vh;
+    width: 100vw;
+    color: #BDC696;
+    background-image: url(../../img/chef.jpg);
+    background-attachment: fixed;
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: 1;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body .wrapper .introSect {
+    background-image: url(../../img/chef-1245676_640.jpg);
+    background-position: left;
+  }
 }
 
 body .wrapper .expSect {
@@ -411,14 +501,38 @@ body .wrapper .expSect {
       -ms-flex-align: end;
           align-items: flex-end;
   margin-top: 10%;
-  height: 65vw;
-  width: 100%;
+  height: 65vh;
   color: #351431;
   z-index: 2;
 }
 
+@media only screen and (max-width: 768px) {
+  body .wrapper .expSect {
+    height: 100vh;
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  body .wrapper .expSect {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 body .wrapper .expSect h2 {
-  font-size: 3em;
+  font-size: 3.8em;
+  font-weight: 300;
+}
+
+@media only screen and (max-width: 768px) {
+  body .wrapper .expSect h2 {
+    font-size: 2.8em;
+  }
 }
 
 body .wrapper .expSect .recipeWrapper {
@@ -433,6 +547,18 @@ body .wrapper .expSect .recipeWrapper {
   -ms-grid-rows: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr;
       grid-template-areas: "recipe1" "recipe2" "recipe3";
+}
+
+@media only screen and (max-width: 768px) {
+  body .wrapper .expSect .recipeWrapper {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  body .wrapper .expSect .recipeWrapper {
+    width: 100%;
+  }
 }
 
 body .wrapper .expSect .recipeCard {
@@ -456,6 +582,12 @@ body .wrapper .expSect .recipeCard {
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+@media only screen and (max-width: 768px) {
+  body .wrapper .expSect .recipeCard {
+    padding: 1%;
+  }
+}
+
 body .wrapper .expSect .recipeCard .imgContainer {
   width: 50%;
   height: 100%;
@@ -468,6 +600,15 @@ body .wrapper .expSect .recipeCard .imgContainer img {
   min-height: 300px;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+@media only screen and (max-width: 768px) {
+  body .wrapper .expSect .recipeCard .imgContainer img {
+    min-width: 180px;
+    max-width: 180px;
+    max-height: 200px;
+    min-height: 200px;
+  }
 }
 
 body .wrapper .expSect .recipeCard .textWrapper {
@@ -486,14 +627,26 @@ body .wrapper .expSect .recipeCard .textWrapper {
 }
 
 body .wrapper .expSect .recipeCard h3 {
-  font-size: 2.2em;
+  font-size: 2.5em;
   text-transform: uppercase;
   letter-spacing: 1.2px;
 }
 
+@media only screen and (max-width: 768px) {
+  body .wrapper .expSect .recipeCard h3 {
+    font-size: 1.8em;
+  }
+}
+
 body .wrapper .expSect .recipeCard p {
   margin-top: 3.5%;
-  font-size: 1.2em;
+  font-size: 1.5em;
+}
+
+@media only screen and (max-width: 768px) {
+  body .wrapper .expSect .recipeCard p {
+    font-size: 1em;
+  }
 }
 
 body .wrapper .expSect .recipe1 {
@@ -530,44 +683,5 @@ body .wrapper .expSect .recipe3 {
   to {
     opacity: 1;
   }
-}
-
-body footer nav {
-  width: 100%;
-  height: 10vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
-
-body footer nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  width: 100%;
-}
-
-body footer nav ul li a {
-  color: #351431;
-  text-decoration: none;
-  font-size: 1.2em;
-  font-weight: 300;
-  letter-spacing: 2.5px;
-  text-transform: uppercase;
 }
 /*# sourceMappingURL=main.css.map */
