--- a/Chef-portfolio/css/main.scss
+++ b/Chef-portfolio/css/main.scss
@@ -101,10 +101,23 @@ body {
         justify-content: flex-start;
         margin-right: auto; 
         margin-left:  auto; 
-        max-width: 1500px; 
+        max-width: 100vw; 
         padding-left: 20px;
         padding-right: 20px;
         animation: fadein 2s;
+
+        @media only screen and (max-width: 768px) {
+               padding-left: 5px;
+               padding-right: 5px;
+       
+       }
+
+       @media only screen and (max-width: 500px) {
+        max-width: 100%;
+        padding-left: 5px;
+        padding-right: 5px;
+        animation: fadein 2s;
+    }
 
  
         .line {
@@ -126,10 +139,23 @@ body {
             box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
             z-index: 3;
 
+            @media only screen and (max-width: 500px) {
+                position: relative;
+                height: 85%;
+            }
+
+            @media only screen and (max-width: 768px) {
+                max-width: 325px;
+            }
+
         svg {
             position: absolute;
             right: 0;
-            top: 0%
+            top: 0%;
+            @media only screen and (max-width: 768px) {
+                width: 125px;
+                height: 125px;
+            }
         }
 
         h1 {
@@ -138,6 +164,9 @@ body {
             font-weight: 300;
             letter-spacing: 1px;
             display: block;
+            @media only screen and (max-width: 768px) {
+                font-size: 2em;
+            }
         }
 
         h2 {
@@ -147,11 +176,27 @@ body {
             letter-spacing: 1px;
             display: block;
             margin-bottom: 5%;
+            
         }
 
         p {
             font-size: 1em;
             letter-spacing: 2.5px;
+        }
+
+        a {
+            text-decoration: none;
+            color: map-get($colors , accentColor1 );
+            text-transform: uppercase;
+            font-size: 1.3em;
+            white-space: nowrap;
+            font-weight: 300;
+            letter-spacing: 1.2px;
+
+            @media only screen and (max-width: 768px) {
+                font-size: 1em;
+             }
+
         }
 
         button {
@@ -163,6 +208,7 @@ body {
             transition: all ease .3s;
             font-size: 1.1rem;
             border-radius: 5px;
+            border: solid 1px map-get($colors , accentColor1 );
             color: map-get($colors , accentColor1 );
         }
 
@@ -200,6 +246,14 @@ body {
             transition: 0.5s ease-out;
             transform: translateY(45px);
             box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+            @media only screen and (max-width: 500px) {
+                position: absolute;
+                width: 500px;
+                height: 500px;
+            }
+
+
 
             .next {
                 position: absolute;
@@ -333,7 +387,6 @@ body {
 
         .introSect {
             height: 100vh;
-            width: 100vw;
             padding: 3%;
             color: map-get($colors , accentColor1 );
             background-image: url(../../img/chef.jpg);
@@ -344,6 +397,23 @@ body {
             background-position: top;
             z-index: 1;
 
+            @media only screen and (max-width: 500px) {
+                height: 100vh;
+                width: 100vw;
+                color: map-get($colors , accentColor1 );
+                background-image: url(../../img/chef.jpg);
+                background-attachment: fixed;
+                box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+                z-index: 1;
+            }
+
+            @media only screen and (max-width: 768px) {
+                background-image: url(../../img/chef-1245676_640.jpg);
+                background-position: left;
+        }
     }
 
         .expSect {
@@ -352,13 +422,27 @@ body {
             justify-content: flex-start;
             align-items: flex-end;
             margin-top: 10%;
-            height: 65vw;
-            width: 100%;
+            height: 65vh;
             color: map-get($colors , accentColor3 ); 
             z-index: 2;
 
+            @media only screen and (max-width: 768px) {
+                height: 100vh;
+                width: 100%; 
+             }
+
+             @media only screen and (max-width: 500px) {
+                justify-content: center;
+                align-items: center;
+             }
+            
+
             h2 {
-                font-size: 3em;
+                font-size: 3.8em;
+                font-weight: 300;
+                @media only screen and (max-width: 768px) {
+                    font-size: 2.8em;
+                 }
             }
 
             .recipeWrapper {
@@ -370,6 +454,13 @@ body {
                 grid-template-columns: 1fr;
                 grid-template-rows: 1fr 1fr 1fr;
                 grid-template-areas: "recipe1" "recipe2" "recipe3";
+                @media only screen and (max-width: 768px) {
+                    width: 50%;
+                 }
+
+                 @media only screen and (max-width: 500px) {
+                    width: 100%;
+                 }
               }
               
               .recipeCard {
@@ -381,6 +472,9 @@ body {
                 color: map-get($colors , accentColor3 );
                 background-color: map-get($colors , accentColor1 );
                 box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+                @media only screen and (max-width: 768px) {
+                    padding: 1%;
+                 }
 
                 .imgContainer {
                     width: 50%;
@@ -392,6 +486,12 @@ body {
                         max-height: 300px;
                         min-height: 300px;
                         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+                        @media only screen and (max-width: 768px) {
+                            min-width: 180px;
+                            max-width: 180px;
+                            max-height: 200px;
+                            min-height: 200px;
+                         }
                     }
                 }
 
@@ -401,20 +501,26 @@ body {
                     justify-content: flex-end;
                     flex-direction: column;
                     margin-left: 1.5%;
+                  
 
                   }
                   
 
                   h3 {
-                      font-size: 2.2em;
+                      font-size: 2.5em;
                       text-transform: uppercase;
                       letter-spacing: 1.2px;
+                      @media only screen and (max-width: 768px) {
+                        font-size: 1.8em;
+                     }
                   }
 
                   p {
                       margin-top: 3.5%;
-                      font-size: 1.2em;
-                      
+                      font-size: 1.5em;
+                      @media only screen and (max-width: 768px) {
+                        font-size: 1em;
+                     }
 
                   }
               }
@@ -438,40 +544,11 @@ body {
             opacity:1;
         }
     }
-
-
-    footer {
-        
-
-
-        nav {
-            width: 100%;
-            height: 10vh;
-            display: flex;
-            flex-direction: row;
-            background-color: map-get($colors , primaryColor3 );
-            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-        
-            ul {
-                display: flex;
-                justify-content: space-around;
-                align-items: center;
-                flex-direction: row;
-                width: 100%;
-                
-                    
-                li a {
-                    color: map-get($colors , accentColor3 ); 
-                    text-decoration: none;
-                    font-size: 1.2em;
-                    font-weight: 300;
-                    letter-spacing: 2.5px;
-                    text-transform: uppercase;
-                }
-            }   
-        }
-    }
-
     
+
 }
+
+
+
+
 
