--- a/Chef-portfolio/css/main.css
+++ b/Chef-portfolio/css/main.css
@@ -453,7 +453,7 @@ body .wrapper .introSect {
   height: 100vh;
   padding: 3%;
   color: #BDC696;
-  background-image: url(../../img/chef.jpg);
+  background-image: url("../../img/chef.jpg");
   background-attachment: fixed;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -468,7 +468,7 @@ body .wrapper .introSect {
     height: 100vh;
     width: 100vw;
     color: #BDC696;
-    background-image: url(../../img/chef.jpg);
+    background-image: url("../../img/chef.jpg");
     background-attachment: fixed;
     -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
