--- a/Chef-portfolio/css/main.css
+++ b/Chef-portfolio/css/main.css
@@ -467,15 +467,14 @@ body .wrapper .introSect {
   body .wrapper .introSect {
     height: 100vh;
     width: 100vw;
-    color: #BDC696;
-    background-image: url("../../img/chef.jpg");
-    background-attachment: fixed;
-    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    z-index: 1;
+    /*        color: map-get($colors , accentColor1 );
+                background-image: url("../../img/chef.jpg");
+                background-attachment: fixed;
+                box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+                z-index: 1;*/
   }
 }
 
