--- a/Chef-portfolio/css/main.scss
+++ b/Chef-portfolio/css/main.scss
@@ -400,14 +400,14 @@ body {
             @media only screen and (max-width: 500px) {
                 height: 100vh;
                 width: 100vw;
-                color: map-get($colors , accentColor1 );
+       /*        color: map-get($colors , accentColor1 );
                 background-image: url("../../img/chef.jpg");
                 background-attachment: fixed;
                 box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center;
-                z-index: 1;
+                z-index: 1;*/
             }
 
             @media only screen and (max-width: 768px) {
