--- a/Chef-portfolio/css/main.css
+++ b/Chef-portfolio/css/main.css
@@ -452,7 +452,9 @@ body .wrapper .tittleContainer .active + .modal {
 body .wrapper .introSect {
   height: 100vh;
   padding: 3%;
+  border: 5px solid red;
   color: #BDC696;
+  background-image: url("../../img/chef.jpg");
   background-attachment: fixed;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
