--- a/Chef-portfolio/css/main.css
+++ b/Chef-portfolio/css/main.css
@@ -161,8 +161,10 @@ body .wrapper .tittleContainer {
 
 @media only screen and (max-width: 500px) {
   body .wrapper .tittleContainer {
-    position: relative;
+    position: absolute;
     height: 85%;
+    right: 20%;
+    top: 10%;
   }
 }
 
@@ -452,7 +454,6 @@ body .wrapper .tittleContainer .active + .modal {
 body .wrapper .introSect {
   height: 100vh;
   padding: 3%;
-  border: 5px solid red;
   color: #BDC696;
   background-image: url("../../img/chef.jpg");
   background-attachment: fixed;
@@ -468,14 +469,6 @@ body .wrapper .introSect {
   body .wrapper .introSect {
     height: 100vh;
     width: 100vw;
-    /*        color: map-get($colors , accentColor1 );
-                background-image: url("../../img/chef.jpg");
-                background-attachment: fixed;
-                box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-                background-repeat: no-repeat;
-                background-size: cover;
-                background-position: center;
-                z-index: 1;*/
   }
 }
 
