--- a/Chef-portfolio/css/main.scss
+++ b/Chef-portfolio/css/main.scss
@@ -140,8 +140,10 @@ body {
             z-index: 3;
 
             @media only screen and (max-width: 500px) {
-                position: relative;
+                position: absolute;
                 height: 85%;
+                right: 20%;
+                top: 10%;
             }
 
             @media only screen and (max-width: 768px) {
@@ -388,7 +390,6 @@ body {
         .introSect {
             height: 100vh;
             padding: 3%;
-            border:  5px solid red;
             color: map-get($colors , accentColor1 );
             background-image: url("../../img/chef.jpg");
             background-attachment: fixed;
@@ -401,14 +402,6 @@ body {
             @media only screen and (max-width: 500px) {
                 height: 100vh;
                 width: 100vw;
-       /*        color: map-get($colors , accentColor1 );
-                background-image: url("../../img/chef.jpg");
-                background-attachment: fixed;
-                box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-                background-repeat: no-repeat;
-                background-size: cover;
-                background-position: center;
-                z-index: 1;*/
             }
 
             @media only screen and (max-width: 768px) {
